# mavryk-packaging

./: README.md  flake.nix  meta.json  protocols.json  release.nix  shell.nix  tezos-release.nix
.buildkite/: pipeline-for-tags.yml  pipeline-raw.yml
.github/: CONTRIBUTING.md  pull_request_template.md  release_pull_request_template.md
.reuse/: dep5
Formula/: mavryk-accuser-PtBoreas.rb  mavryk-admin-client.rb  mavryk-baker-PtBoreas.rb  mavryk-client.rb  mavryk-codec.rb  mavryk-dac-client.rb  mavryk-dac-node.rb  mavryk-dal-node.rb  mavryk-node-basenet.rb  mavryk-node-mainnet.rb  mavryk-node.rb  mavryk-sapling-params.rb  mavryk-signer-http.rb  mavryk-signer-https.rb  mavryk-signer-tcp.rb  mavryk-signer-unix.rb  mavryk-signer.rb  mavryk-smart-rollup-node.rb  mavryk-smart-rollup-wasm-debugger.rb
baking/: README.md  pyproject.toml  setup.cfg
baking/src/mavryk_baking/: mavryk_setup_wizard.py  mavryk_voting_wizard.py  provider.py  steps.py  util.py  validators.py  wizard_structure.py
docker/: README.md  active-protocols  docker-static-build.sh  fetch_mavryk_sources.py  mavkit-executables
docs/: baking.md  configuration.md  fedora.md  macos.md  release-workflow.md  smart-rollup.md  support-policy.md  systemd.md  ubuntu.md  versioning.md  voting-test.md  voting.md  windows.md
nix/: README.md  default.nix
scripts/: autorelease.sh  bottle-hashes.sh  build-all-bottles.sh  build-one-bottle.sh  publish-native-packages.py  sign-commits.sh  sync-bottle-hashes.sh  update-brew-formulae.sh  update-mavryk.sh  update-release-binaries.py
tests/: mavryk-nix-binaries.nix  (+3 more)
(+48 files in other folders)
