# SPDX-FileCopyrightText: 2023 Oxhead Alpha
# SPDX-License-Identifier: LicenseRef-MIT-OA

[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mavryk-baking"
authors = [
  { name = "MavrykDynamics", email = "info@mavryk.io" },
]
description = "Package that provides systemd services that orchestrate other services from Mavryk packages"
license = { text = "LicenseRef-MIT-OA" }
requires-python = ">=3.8"
readme = "README.md"
version = "v20.2"

[tool.setuptools.packages.find]
where= ["src"]

[project.scripts]
mavryk-setup = "mavryk_baking.mavryk_setup_wizard:main"
mavryk-vote = "mavryk_baking.mavryk_voting_wizard:main"
