# SPDX-FileCopyrightText: 2023 Oxhead Alpha
# SPDX-License-Identifier: LicenseRef-MIT-OA

[metadata]
name = mavryk-baking
author = Mavryk Dynamics
author_email = info@mavryk.io
description = Package that provides systemd services that orchestrate other services from Mavryk packages
license = LicenseRef-MIT-OA

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  mavryk-setup = mavryk_baking.mavryk_setup_wizard:main
  mavryk-vote = mavryk_baking.mavryk_voting_wizard:main

[tox:tox]
env_list =
  py38
  type
